--- a/local.properties.example
+++ b/local.properties.example
@@ -1,3 +1,5 @@
 "Add this to your existing local.properties file"
 
+sdk.dir=sdk_directory_here //Should already be in the file by default
 OPENWEATHER_API_KEY=your_openweather_api_key_here
+EBAY_BASIC_KEY=your_ebay_basic_key_here
