--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ adsMobileSdk = "0.21.0-beta01"
 foundation = "1.9.4"
 coil = "3.3.0"
 appcompat = "1.7.1"
+truth = "1.1.3"
 
 [libraries]
 androidx-compose-material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "materialIconsCore" }
@@ -65,6 +66,7 @@ androidx-compose-foundation = { group = "androidx.compose.foundation", name = "f
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 coil-network-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 
 
 [plugins]
