chore: Configure ktlint and detekt to exclude build directories
Configures the ktlint and detekt tasks to ignore the `build` and `generated` directories. It also updates `.gitignore` to recursively ignore build directories and adds rules to `.editorconfig` to disable ktlint for build, generated, and test files.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,14 @@
 root = true
 
+[**/build/**]
+ktlint = disabled
+
+[**/generated/**]
+ktlint = disabled
+
+[**Test.kt]
+ktlint = disabled
+
 [*.{kt,kts}]
 ktlint_code_style = android_studio
 ktlint_function_naming_ignore_when_annotated_with = Composable
