--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ coil = "3.3.0"
 appcompat = "1.7.1"
 truth = "1.1.3"
 material = "1.13.0"
+engageCore = "1.5.10"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -73,6 +74,7 @@ coil-network-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp"
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+engage-core = { group = "com.google.android.engage", name = "engage-core", version.ref = "engageCore" }
 
 
 [plugins]
