refactor: add currency API key to build.gradle.kts and update dependencies
Adds the `CURRENCY_API_KEY` to the build configuration and the example local properties file.

Also, the `constraintlayout-compose` dependency is moved to the version catalog (`libs.versions.toml`) and updated.

--- a/local.properties.example
+++ b/local.properties.example
@@ -3,3 +3,4 @@
 sdk.dir=sdk_directory_here //Should already be in the file by default
 OPENWEATHER_API_KEY=your_openweather_api_key_here
 EBAY_BASIC_KEY=your_ebay_basic_key_here
+CURRENCY_API_KEY=your_currency_api_key_here
