--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ material = "1.13.0"
 engageCore = "1.5.10"
 hiltCommon = "1.3.0"
 workRuntimeKtx = "2.11.0"
+uiTestJunit4 = "1.9.5"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -86,6 +87,7 @@ truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 engage-core = { group = "com.google.android.engage", name = "engage-core", version.ref = "engageCore" }
 androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "uiTestJunit4" }
 
 
 [plugins]
