--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ truth = "1.1.3"
 material = "1.13.0"
 engageCore = "1.5.10"
 hiltCommon = "1.3.0"
+turbine = "1.2.1"
 workRuntimeKtx = "2.11.0"
 
 [libraries]
@@ -86,6 +87,7 @@ truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 engage-core = { group = "com.google.android.engage", name = "engage-core", version.ref = "engageCore" }
 androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 
 [plugins]
